# scorpio_description

./: CMakeLists.txt  CONTRIBUTING.md  README.md  dependencies.repos  package.xml  update_model.sh
.github/workflows/: build_and_test.yml
launch/: robot_description_launch.py  robot_state_publisher_launch.py
params/: robot_description.yaml
resource/models/d435i/: model.config  model.sdf  model.sdf.xmacro
resource/models/mid360/: model.config  model.sdf  model.sdf.xmacro
resource/models/rplidar_a2/: model.config  model.sdf  model.sdf.xmacro
resource/models/scorpio/: model.config  model.sdf  model.sdf.xmacro  scorpio.def.xmacro  wheels.def.xmacro
resource/models/scorpio/meshes/: left_wheel.stl  right_wheel.stl
resource/models/ydlidar_g4/: model.config  model.sdf  model.sdf.xmacro
resource/scorpio_ros2_control_config/: ackermann_drive_controller.yaml  ros2_control.urdf
resource/xmacro/: scorpio.sdf.xmacro
rviz/: visualize_robot.rviz
